<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/avatar"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_created_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
            tools:text="@string/created_at" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="@id/iv_detail_photo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iv_detail_photo"
            app:layout_constraintTop_toBottomOf="@id/iv_detail_photo"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_created_at"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/teal_200"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_description"
            tools:text="@string/latitude" />

        <TextView
            android:id="@+id/tv_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_description"
            app:layout_constraintStart_toEndOf="@+id/tv_latitude"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_description"
            tools:text="@string/longitude" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>